# Pico

blink_irq/: blink_irq.cpp  diagram.json
blink_timer/: blink_timer.cpp
dataarkitektur/: CMakeLists.txt  dataarkitektur.cpp  diagram.json  lcd.h  test.cpp
external_blink/: CMakeLists.txt  external_blink.cpp
external_button_blink/: CMakeLists.txt  diagram.json  external_button_blink.cpp  wokwi.toml
hello_blink/: CMakeLists.txt  hello_blink.c
inoutusb/: CMakeLists.txt  inoutusb.cpp
lcd/: diagram.json  lcd.h  main.cpp
lcd_input/: lcd.h  main.cpp
lock/: diagram.json  main.cpp
mqtt_test/pc/: mqtt_client.python
mqtt_test/pico/: CMakeLists.txt  mqtt_test.c  pico_sdk_import.cmake
pico_terminal/: CMakeLists.txt  pico_terminal.cpp
picow_blink/: picow_blink.c
test/: CMakeLists.txt  test.cpp
